# KarolaScriptLLVM

./: CMakeLists.txt  LICENSE  README.md
src/: ErrorReporter.h  main.cpp
src/interpreter/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  KarolaScriptAnonFunction.cpp  KarolaScriptAnonFunction.h  KarolaScriptCallable.h  KarolaScriptClass.cpp  KarolaScriptClass.h  KarolaScriptFunction.cpp  KarolaScriptFunction.h  KarolaScriptInstance.h  Resolver.cpp  Resolver.h  RuntimeError.h
src/interpreter/ks_stdlib/: StdLibFunctions.cpp  StdLibFunctions.h
src/lexer/: Token.h  lexer.cpp  lexer.h
src/llvm-gen/: CodeGenVisitor.cpp  CodeGenVisitor.h  Environment.h  Generator.cpp  Generator.h  KarolaScriptContext.cpp  KarolaScriptContext.h  KarolaScriptNamespace.h
src/llvm-gen/mlir/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h
src/llvm-gen/mlir/include/Dialect/Polynomial/: PolyDialect.td
src/llvm-gen/mlir/lib/Transform/Affine/: AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h
src/middleware/: CodeGenVisitor.cpp  Environment.cpp  Environment.h  KarolaScriptContext.cpp  KarolaScriptContext.h  KarolaScriptNamespace.cpp  KarolaScriptNamespace.h
src/middleware/ksir/: ksir.cpp  ksir.h
src/middleware/llvm-gen/: CodeGenVisitor.cpp  CodeGenVisitor.h
src/middleware/mlir/include/Dialect/: test_dialect.td
src/middleware/mlir/include/Dialect/Polynomial/: PolyOps.td
src/middleware/mlir/lib/Dialect/: test_dialect.cpp  test_dialect.h
src/middleware/mlir/lib/Dialect/Polynomial/: PolyDialect.cpp  PolyDialect.h  PolyOps.cpp  PolyOps.h  PolyTypes.h
src/middleware/mlir/lib/Transform/Affine/: AffineFullUnroll.h  Passes.h
src/middleware/mlir/lib/Transform/Arith/: MulToAdd.cpp  MulToAdd.h  Passes.h
src/middleware/utils/: precompiles.h
src/parser/: Expr.h  Parser.cpp  Parser.h  Stmt.h
src/resources/: basics.ks  classes.ks  code1.ks  code2.ks  code3.ks  code4.ks  code5.ks  code6.ks  code7.ks  functions.ks  karolaScript.grammar
src/util/: ErrorReporter.cpp  ErrorReporter.h  Object.cpp  Object.h  Utils.cpp  Utils.h  common.h
